# test-github-actions

./: .pre-commit-config.yaml  environment.yml  pyproject.toml  tox.ini
test_github_actions/: file.py  file2.py  harmonic_mean.py
